<resources>
    <string name="app_name">Student_App</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message">Enter Valid Phone Number</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_phone_exists">Phone Already Exists</string>
    <string name="saved">Added Successfully</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="add_student">Add Students</string>
    <string name="viewStudents">View Students</string>
    <string name="trackStudents">Track</string>
    <string name="Contribute">CONTRIBUTE</string>
    <string name="mapview">Map View</string>
    <string name="text_title">View Students Details</string>
    <string name="hint_school">School</string>
    <string name="hint_ID">Student ID</string>
    <string name="title_activity_maps_view">Map</string>
    <string name="welcome">"Welcome "</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="fatherName">FatherName</string>
    <string name="hint_momName">Mother Name</string>
    <string name="School">School Name</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
</resources>