<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/colorBackground"
    tools:context="Activity.SignIn_Activity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <androidx.appcompat.widget.AppCompatImageView
           android:layout_width="wrap_content"
           android:layout_height="300dp"
           android:padding="8dp"
           android:layout_gravity="center_horizontal"
           android:src="@drawable/students_app_logo"/>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/textInputLayoutName"
               android:layout_width="match_parent"
               android:padding="10dp"
               android:layout_height="wrap_content"
               >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/textInputEditTextName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_name"
               android:inputType="text"
               android:maxLines="1"
               android:textSize="16sp"
               android:textColor="@android:color/white" />
           </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/textInputLayoutPhone"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:layout_height="wrap_content"
              >
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/textInputEditTextPhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_phone"
    android:inputType="text"
    android:maxLines="1"
    android:textSize="16sp"
    android:textColor="@android:color/white" />

          </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayoutPasswordSignIn"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/textInputEditTextPasswordSignIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_password"
    android:inputType="textPassword"
    android:textSize="16sp"
    android:maxLines="1"
    android:textColor="@android:color/white" />
</com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayoutConfirmPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
</com.google.android.material.textfield.TextInputLayout>
<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/appCompatButtonRegister"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:padding="16dp"
    android:textSize="16sp"
    android:background="@color/colorTextHint"
    android:text="@string/text_register" />
       <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/already_a_member_login"
                android:textSize="16sp" />
   </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
