<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/colorBackground"
    tools:context="Activity.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="300dp"
          android:padding="8dp"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/students_app_logo" />
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/textInputLayoutPhone"
       android:padding="16dp"
       android:layout_marginTop="10dp">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/textInputEditTextPhone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_phone"
           android:inputType="text"
           android:maxLines="1"
           android:textColor="@android:color/white" />

   </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/textInputLayoutPassword"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_login" />
           <androidx.appcompat.widget.AppCompatTextView
               android:id="@+id/textViewLinkRegister"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="40dp"
               android:padding="8dp"
               android:gravity="center"
               android:textColor="@color/white"
               android:text="@string/text_not_member"
               android:textSize="18sp" />
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>