<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutStu"
    tools:context="Activity.AddStudentsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/student" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutSchool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextSchool"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/School"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_phone"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/radioKb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:button="@null"
                            android:checked="true"
                            android:drawableEnd="@android:drawable/btn_radio"
                            android:drawableRight="@android:drawable/btn_radio"
                            android:gravity="center"
                            android:text="@string/Male"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginStart="80dp"
                            android:layout_marginLeft="80dp"
                            android:button="@null"
                            android:drawableEnd="@android:drawable/btn_radio"
                            android:drawableRight="@android:drawable/btn_radio"
                            android:gravity="center"
                            android:text="@string/Female"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutFatherName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextFatherName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fatherName"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutMomName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextMomName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_momName"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@color/purple_500"
                        android:gravity="center"
                        android:text="@string/submit" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>