<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="Activity.Dashboard_Activity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/students_app_logo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/addStudentsCard"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/addStudentsImage"
                    android:layout_width="108dp"
                    android:layout_height="103dp"
                    android:foregroundGravity="center"
                    android:src="@drawable/add"
                    app:layout_constraintBottom_toTopOf="@+id/addStudentsText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/addStudentsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_student"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_200"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addStudentsImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/viewStudentsCard"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:background="@color/white"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/viewStudentsImage"
                    android:layout_width="108dp"
                    android:layout_height="103dp"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:src="@drawable/target"
                    app:layout_constraintBottom_toTopOf="@+id/viewStudentsText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/viewStudentsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/viewStudents"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_200"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewStudentsImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/MapViewCard"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/MapViewImage"
                    android:layout_width="108dp"
                    android:layout_height="103dp"
                    android:foregroundGravity="center"
                    android:src="@drawable/map"
                    app:layout_constraintBottom_toTopOf="@+id/MapViewText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/MapViewText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mapview"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_200"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/MapViewImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>